# anchor-drag-pro

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  lv_conf.h  partitions.csv  sdkconfig  sdkconfig.defaults
assets/: esp32-s3-nvs-configuration-reference.md  esp32-s3-touch-lcd-4.3b-self-test.md  utc_offsets_locations.h  utc_offsets_minimal.h
docs/: Adding_Custom_Fonts.md  BOM_Anchor_Alarm.md  ESP32-S3-Touch-LCD-4.3B-BOX-KNOWLEDGE.md  ESP32_S3_HARDWARE_CONFIG.md  Font_Converter_Setup.md  LVGL_Simulator_Guide.md  OUTSTANDING_ISSUES.md  Screw_Terminal_Connections.md  UI_Screens.md  UI_Screens.md.bak  UI_Screens_Config_Update.md  Waveshare_ESP32-S3-Touch-LCD-4.3B_Summary.md  Wiring_Guide.md  anchoring_mode_specification.md  convert_image_to_lvgl_specification.md  garmin_nmea2000_pgn_reference.md  nmea2000_pgn_anchor_alarm_table.md  specification anchor alarm.txt  wind_drift_ui_logic.md
main/: CMakeLists.txt  board_config.h  ch422g.c  ch422g.h  datetime_settings.c  datetime_settings.h  display_driver.c  display_driver.h  display_test.c  display_test.h  esp_io_expander_ch422g.c  esp_io_expander_ch422g.h  idf_component.yml  lv_conf.h  lvgl_init.c  lvgl_init.h  lvgl_port.h  main.c  power_management.c  power_management.h  rtc_pcf85063a.h  screens.c  screens.h  sd_card.c  sd_card.h  simple_test_screen.c  simple_test_screen.h  smpte_test_pattern.h  smpte_test_screen.c  smpte_test_screen.h  splash_logo.c  splash_logo.h  splash_screen.c  splash_screen.h  start_screen.c  start_screen.h  touch_driver.c  touch_driver.h  tv_test_pattern.h  ui_footer.c  (+5 more)
main/fonts/: apple_symbols_16.c  apple_symbols_24.c  apple_symbols_32.c  custom_fonts.h  golostext_regular_16.c  golostext_regular_20.c  golostext_regular_24.c  golostext_regular_32.c  golostext_regular_48.c  orbitron_variablefont_wght_16.c  orbitron_variablefont_wght_20.c  orbitron_variablefont_wght_24.c  orbitron_variablefont_wght_32.c  orbitron_variablefont_wght_48.c  poppins_regular_16.c  poppins_regular_20.c  poppins_regular_24.c  poppins_regular_32.c  poppins_regular_48.c  sfnsrounded_16.c  sfnsrounded_20.c  sfnsrounded_24.c  sfnsrounded_32.c  sfnsrounded_48.c
scripts/: README_FONTS.md  convert_font.sh  convert_image_to_lvgl.py  modify_test_pattern.py
